--- a/templates/budgets/yearly_budget_detail.html
+++ b/templates/budgets/yearly_budget_detail.html
@@ -12,7 +12,7 @@
         <div class="card-table-heading">Saved</div>
         <div class="card-table-heading">Income Budgeted</div>
         <div class="card-table-heading">Remaining</div>
-        <div class="card-table-heading">Free</div>
+        <div class="card-table-heading">Free at end of year</div>
     </div>
     <div class="summary-horizontal-grid-monthly">
         <div>${{total_budgeted_ytd}}</div>
@@ -25,10 +25,10 @@
     <div class="summary-horizontal-grid-monthly card-table-header">
         <div class="card-table-heading">Budgeted</div>
         <div class="card-table-heading">Spent + Saved</div>
-        <div class="card-table-heading">Saved</div>
+        <div class="card-table-heading"></div>
         <div class="card-table-heading">Total Income</div>
         <div class="card-table-heading">Remaining Current Year</div>
-        <div class="card-table-heading">Free</div>
+        <div class="card-table-heading">Total Income - Total spent+saved</div>
     </div>
     <div class="summary-horizontal-grid-monthly">
         <div>${{total_budgeted}}</div>
@@ -36,26 +36,30 @@
         <div class="">${{total_saved}}</div>
         <div class="">${{total_income.amount}}</div>
         <div class="">${{total_remaining_current_year}}</div>
-        <div class="">${{free_income}}</div>
+        <div class="">${{total_income_spent_diff}}</div>
     </div>
     <div class="summary-horizontal-grid-monthly card-table-header">
-        <div class="card-table-heading"></div>
-        <div class="card-table-heading"></div>
+        <div class="card-table-heading">Income-Budgeted</div>
+        <div class="card-table-heading">Income-Budgeted YTD</div>
         <div class="card-table-heading"></div>
         <div class="card-table-heading"></div>
         <div class="card-table-heading">Remaining YTD</div>
-        <div class="card-table-heading"></div>
+        <div class="card-table-heading">Budgeted Income - Total spent+saved</div>
     </div>
     <div class="summary-horizontal-grid-monthly">
-        <div>${{total_budgeted}}</div>
-        <div class="">${{total_spent}}</div>
+        <div class="">${{budgeted_income_diff}}</div>
+        <div class="">${{budgeted_income_diff_ytd}}</div>
         <div class="">${{total_saved}}</div>
         <div class="">${{total_income.amount}}</div>
         <div class="">${{total_remaining_ytd}}</div>
-        <div class="">${{free_income}}</div>
+        <div class="">${{budgeted_income_spent_diff}}</div>
     </div>
 </div>
 
+<select name="month" onChange="window.location.href='{{request.path}}?ytd=1'">
+    <option value="1">January</option>
+    <option value="2">February</option>
+</select>
 <div class="card-container-horz">
     <div class="card-base">
         <div class="card-header">
