Added month selection for YTD calculations

--- a/templates/budgets/yearly_budget_detail.html
+++ b/templates/budgets/yearly_budget_detail.html
@@ -56,10 +56,30 @@
     </div>
 </div>
 
-<select name="month" onChange="window.location.href='{{request.path}}?ytd=1'">
+<select class="month-select" name="month">
     <option value="1">January</option>
     <option value="2">February</option>
+    <option value="3">March</option>
+    <option value="4">April</option>
+    <option value="5">May</option>
+    <option value="6">June</option>
+    <option value="7">July</option>
+    <option value="8">August</option>
+    <option value="9">September</option>
+    <option value="10">October</option>
+    <option value="11">November</option>
+    <option value="12">December</option>
 </select>
+
+<script>
+    const monthYtdSelect = document.querySelector(".month-select")
+    const monthYtd = `{{request.GET.ytd}}`
+    monthYtdSelect.selectedIndex = `${monthYtd- 1}`
+    monthYtdSelect.onchange = function(){
+        window.location=`{{request.path}}?ytd=${this.value}`
+}
+</script>
+
 <div class="card-container-horz">
     <div class="card-base">
         <div class="card-header">
