--- a/static/css/base.css
+++ b/static/css/base.css
@@ -101,6 +101,19 @@ a {
     font-weight: bold;
 }
 
+.month-nav-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-x: auto;
+}
+
+.month-nav-container {
+    display: flex;
+    justify-content: space-around;
+    width: 1050px;
+}
+
 .content-container {
     /* display: grid;
     grid-template-columns: 1fr;
